src/test/deca/context/invalid/homemade/tests/test342_new_no_class.deca
// test invalide de la règle 3.42



class A {
}

{
    int x = 2;
    x a = new x();
}